[package]
name = "SimpleTodo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
nanoid = "0.4.0"
serde = { version = "1", features = ["derive"] }
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-actix-web = "0.1"
utoipa-scalar = { version = "0.2", features = ["actix-web"] }
env_logger = "0.11.6"
log = "0.4.22"
